--- a/components.json
+++ b/components.json
@@ -14,7 +14,7 @@
   "aliases": {
     "components": "@/components",
     "utils": "@/lib/utils",
-    "ui": "@/components/ui",
+    "ui": "@/compon/entsui",
     "lib": "@/lib",
     "hooks": "@/hooks"
   }
